[tool.poetry]
name = "pyspark-testing-env"
version = "0.1.0"
description = "Example of a pyspark testing environment with poetry"
authors = ["emmc15 <https://github.com/emmc15>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
pyspark = "^3.3.1"
delta-spark = "^2.2.0"
pandas = "^1.5.2"
numpy = "^1.24.1"
boto3 = "^1.26.50"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.10"
black = "^22.12.0"
flake8 = "^6.0.0"
pytest = "^7.2.0"
jupyterlab = "^3.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
